refactor: replace List.getLast() calls with indexed access